--- a/src/components/ArticleList/styles.module.css
+++ b/src/components/ArticleList/styles.module.css
@@ -1,89 +1,8 @@
 .articleList {
   position: relative;
   display: flex;
-  flex-direction: column;
-  gap: 8px;
-  align-items: flex-start;
-  width: 100%;
-  container-type: inline-size;
-
-  & .listItem {
-    & .newsItem {
-      display: flex;
-      gap: 8px 8px;
-      padding: 8px;
-      overflow: hidden;
-      font-family: var(--font-family-noto-sans-jp);
-
-      & .thumbnail {
-        width: 320px;
-        max-width: 100%;
-        height: 180px;
-
-        & .image {
-          width: inherit;
-          height: inherit;
-          border-radius: 8px;
-          object-fit: cover;
-        }
-      }
-
-      & .text {
-        display: flex;
-        flex: 1;
-        flex-direction: column;
-
-        & .title {
-          grid-area: 1 / 2 / 2 / 3;
-          font-size: 18px;
-          font-weight: bold;
-          white-space: normal;
-        }
-
-        & .author {
-          grid-area: 2 / 2 / 3 / 3;
-          font-size: 14px;
-          color: var(--color-gray-600);
-        }
-
-        & .date {
-          grid-area: 3 / 2 / 4 / 3;
-          font-size: 14px;
-          color: var(--color-gray-600);
-        }
-
-        & .tags {
-          display: flex;
-          flex-wrap: wrap;
-          grid-area: 4 / 2 / 5 / 3;
-          gap: 8px;
-          height: 20px;
-
-          & .tag {
-            padding: 4px 8px;
-            font-size: 12px;
-            color: var(--color-gray-700);
-            background-color: var(--color-gray-300);
-            border-radius: 4px;
-          }
-        }
-      }
-    }
-
-    /* newsItem */
-    @container (max-width: 600px) {
-      align-self: center;
-      width: 320px;
-
-      & .newsItem {
-        flex-direction: column;
-
-        & .text {
-          & .tags {
-            height: auto;
-          }
-        }
-      }
-    }
-  }
+  flex-flow: column nowrap;
+  gap: 16px;
+  width: fit-content;
+  margin: 0 auto;
 }
